--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ eggs
 include/
 lib/
 local/
-src/
 build/
 dist/
 parts/
@@ -27,3 +26,7 @@ var/
 .DS_Store
 .installed.cfg
 .mr.developer.cfg
+.Python
+.idea
+src/*
+!src/ssu_theme
