Adding graphical draft

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,8 +9,12 @@ eggs +=
     voteit.dutt
     voteit.combined_simple
     voteit.stv
+    ssu_theme
 #    voteit.vote_groups
 #    voteit.qr
+
+develop =
+    src/ssu_theme
 
 show-picked-versions = true
 
