--- a/develop.cfg
+++ b/develop.cfg
@@ -6,7 +6,9 @@ eggs -=
     pyramid_redis_sessions
 
 eggs +=
+    pyramid_debugtoolbar
     nose
+    voteit.core[testing]
 
 parts -=
     crontab-reboot
