--- a/etc/development.ini
+++ b/etc/development.ini
@@ -26,7 +26,7 @@ arche.timezone = Europe/Stockholm
 arche.salt_file = %(here)s/../var/salt.txt
 arche.cache_max_age = 7200
 arche.hash_method = voteit.core.security.get_sha_password
-
+arche.debug = True
 
 #List any extra plugins you'll want to use here
 plugins =
@@ -43,6 +43,7 @@ plugins =
     voteit.dutt
     voteit.combined_simple
     voteit.stv
+    ssu_theme
 
 
 [pipeline:main]
@@ -55,7 +56,8 @@ pipeline =
 use = egg:fanstatic#fanstatic
 #debug = True
 bottom = True
-
+rollup = True
+recompute_hashes = True
 
 [server:main]
 use = egg:waitress#main
